--- a/index.html
+++ b/index.html
@@ -11,19 +11,20 @@
     <div class="main">
         <div class="esquerda-login">
             <h1>Faça o login<br>E entre para o time</h1>
+            <img src="astronauta.svg" class="left-login-image" alt="Astronauta em meio de estrelas e planetas">
         </div>
         <div class="direita-login">
             <div class="card-login">
                 <h1>Login</h1>
-                <div class="text-field">
+                <div class="textfield">
                     <label for="usuario">Usuário</label>
                     <input type="text" name="usuario" placeholder="Usuário">
                 </div>
-                <div>
+                <div class="textfield">
                     <label for="senha">Senha</label>
                     <input type="password" name="senha" placeholder="Senha">
                 </div>
-                <button class="bts-login">Login</button>
+                <button class="btn-login">Login</button>
             </div>
         </div>
     </div>
