--- a/index.html
+++ b/index.html
@@ -1,32 +1,36 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css" />
     <title>Login</title>
-</head>
-<body>
+  </head>
+  <body>
     <div class="main">
-        <div class="esquerda-login">
-            <h1>Faça o login<br>E entre para o time</h1>
-            <img src="astronauta.svg" class="left-login-image" alt="Astronauta em meio de estrelas e planetas">
+      <div class="esquerda-login">
+        <h1>Faça o login<br />E entre para o time</h1>
+        <img
+          src="./images/astronauta.svg"
+          class="left-login-image"
+          alt="Astronauta em meio de estrelas e planetas"
+        />
+      </div>
+      <div class="direita-login">
+        <div class="card-login">
+          <h1>Login</h1>
+          <div class="textfield">
+            <label for="usuario">Usuário</label>
+            <input type="text" name="usuario" placeholder="Usuário" />
+          </div>
+          <div class="textfield">
+            <label for="senha">Senha</label>
+            <input type="password" name="senha" placeholder="Senha" />
+          </div>
+          <button class="btn-login">Login</button>
         </div>
-        <div class="direita-login">
-            <div class="card-login">
-                <h1>Login</h1>
-                <div class="textfield">
-                    <label for="usuario">Usuário</label>
-                    <input type="text" name="usuario" placeholder="Usuário">
-                </div>
-                <div class="textfield">
-                    <label for="senha">Senha</label>
-                    <input type="password" name="senha" placeholder="Senha">
-                </div>
-                <button class="btn-login">Login</button>
-            </div>
-        </div>
+      </div>
     </div>
-</body>
+  </body>
 </html>
